--- a/css/sticky-footer-navbar.css
+++ b/css/sticky-footer-navbar.css
@@ -101,6 +101,38 @@ section{
 }
 
 
+/* Navbar styles
+-------------------------------------------------- */
+.page-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    text-align: center;
+    border: none;
+}
+
+.page-header h1 {
+    font-family: 'Libre Bodoni', serif;
+    font-weight: bold;
+    font-size: 50px;
+}
+
+.page-header div {
+    text-align: center;
+    width: 70%;
+}
+
+.page-header p {
+    margin-top: 30px;
+    font-size: 25px;
+    line-height: 50px;
+    font-weight: bold;
+    text-shadow: 1px 1px 0 #7A7A7A;
+}
+
+
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
