--- a/includes/header.html
+++ b/includes/header.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title><?php echo $page_title; ?></title>
+		<link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link href="css/sticky-footer-navbar.css" rel="stylesheet">
 		<link rel="stylesheet" href="css/styles-formRegister.css">
@@ -32,7 +33,7 @@
 			<label for="check" class="checkbtn">
 				<i class="fas fa-bars"></i>
 			</label>
-			<a href="#" class="enlace">
+			<a href="index.php" class="enlace">
 				<img src="images/logo.png" alt="" class="logo">
 			</a>
 			<ul>
