--- a/includes/header.html
+++ b/includes/header.html
@@ -38,9 +38,10 @@
 			</a>
 			<ul>
 				<li><a class="active" href="index.php">Home</a></li>
+				<li><a href="login.php">Login</a></li>
 				<li><a href="register.php">Register</a></li>
 				<li><a href="view_users.php">View Users</a></li>
-				<li><a href="password.php">Change Password</a></li>
+				<!-- <li><a href="password.php">Change Password</a></li> -->
 			</ul>
 		</nav>
 <!-- Script 9.1 - header.html -->
