--- a/includes/header.html
+++ b/includes/header.html
@@ -8,6 +8,7 @@
 		<link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link href="css/sticky-footer-navbar.css" rel="stylesheet">
+		<link rel="stylesheet" href="css/styles-Notes.css">
 		<link rel="stylesheet" href="css/styles-formRegister.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 	</head>
@@ -40,8 +41,8 @@
 				<li><a class="active" href="index.php">Home</a></li>
 				<li><a href="login.php">Login</a></li>
 				<li><a href="register.php">Register</a></li>
-				<li><a href="view_users.php">View Users</a></li>
+				<li><a href="view_notes.php">View Notes</a></li>
+				<li><a href="delete_update_notes.php">Delete / Update Notes</a></li>
 				<!-- <li><a href="password.php">Change Password</a></li> -->
 			</ul>
 		</nav>
-<!-- Script 9.1 - header.html -->
