--- a/includes/header.html
+++ b/includes/header.html
@@ -42,6 +42,7 @@
 				<li><a href="login.php">Login</a></li>
 				<li><a href="register.php">Register</a></li>
 				<li><a href="view_notes.php">View Notes</a></li>
+				<li><a href="create_notes.php">Create Note</a></li>
 				<li><a href="delete_update_notes.php">Delete / Update Notes</a></li>
 				<!-- <li><a href="password.php">Change Password</a></li> -->
 			</ul>
