--- a/includes/header_logged.html
+++ b/includes/header_logged.html
@@ -39,11 +39,12 @@
 			</a>
 			<ul>
 				<li><a class="active" href="index.php">Home</a></li>
-				<li><a href="login.php">Login</a></li>
-				<li><a href="register.php">Register</a></li>
-				<!-- <li><a href="view_notes.php">View Notes</a></li>
+				<!-- <li><a href="login.php">Login</a></li>
+				<li><a href="register.php">Register</a></li> -->
+				<li><a href="view_notes.php">View Notes</a></li>
 				<li><a href="create_notes.php">Create Note</a></li>
-				<li><a href="delete_update_notes.php">Delete / Update Notes</a></li> -->
+				<li><a href="delete_update_notes.php">Delete / Update Notes</a></li>
+				<li><a href="logout.php">Logout</a></li>
 				<!-- <li><a href="password.php">Change Password</a></li> -->
 			</ul>
 		</nav>
