CrearNota y VerNotas HECHOS

--- a/css/sticky-footer-navbar.css
+++ b/css/sticky-footer-navbar.css
@@ -57,6 +57,11 @@ section{
     background-position: center center;
 }
 
+.logout {
+    background-color: red;
+    font-weight: bold;
+}
+
 @media (max-width: 952px){
     .enlace{
         padding-left: 20px;
