--- a/includes/header_logged.html
+++ b/includes/header_logged.html
@@ -44,7 +44,7 @@
 				<li><a href="view_notes.php">View Notes</a></li>
 				<li><a href="create_notes.php">Create Note</a></li>
 				<li><a href="delete_update_notes.php">Delete / Update Notes</a></li>
-				<li><a href="logout.php">Logout</a></li>
+				<li><a class="logout" href="logout.php">Logout</a></li>
 				<!-- <li><a href="password.php">Change Password</a></li> -->
 			</ul>
 		</nav>
